--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -155,3 +155,9 @@
   position: absolute;
   bottom: 0% !important;
 }
+@layer utilities {
+  .browser-default,
+  .browser-default * {
+    all: revert-layer;
+  }
+}
